20 August 2017 - MaRC 0.9.9

- Data generated by the MU, MU0, PHASE, LATITUDE and LONGITUDE virtual
  images are now automatically offset and scaled by the largest power
  of 10 suitable for maximizing the number of significant digits retained
  when storing their floating point values in integer typed maps.  For
  example, MU image data, which has a range of [-1, 1], will be scaled
  and offset to a range of [0, 200] for a map with BYTE (unsigned 8
  bit integer) data, [-10000, 10000] for a SHORT (signed 16 bit
  integer) data type map, and [-1e+09, 1e+09] for LONG (signed 32 bit
  integer) typed maps.

  The virtual image data is only automatically scaled and/or offset
  for integer typed maps.  They are not scaled or offset when creating
  maps with a floating point data type (DATA_TYPE of FLOAT or
  DOUBLE).

  The necessary scale and offset needed to obtain the true values of
  these virtual images in integer typed maps is now automatically
  written to the map FITS header as well.

  NOTE: The hardcoded scale value of 10000 for the MU, MU0 and PHASE
        virtual images that existed in previous versions of MaRC has
        been removed for all map data types.  Due to the automatic
        scaling that now occurs, the results will be the same for
        SHORT map types, but not the other types.  As described above,
        a better scaling factor and offset will be chosen.

- Corrected problem where flat-field correction would fail.

- Improved accuracy of vector magnitude calculations by leveraging an
  implementation that avoids floating point underflow and overflow, as
  well as having extremely low floating point error.

- Improved accuracy of quadratic equation root calculations by using
  an implementation that avoids loss of significant digits
  (i.e. catastrophic cancellation).  This impacts the sky removal
  feature and the Orthographic map projection.

- LONG map types are now correctly written to the map FITS file on 64