@@ -85,10 +85,6 @@ namespace MaRC
                                  double lon,
                                  double & data) const;
 
-        /// Is point at given latitude and longitude visible to the
-        /// observer?
-        virtual bool is_visible(double lat, double lon) const;
-
     private:
 
         /// Object representing the body being mapped.
