@@ -43,19 +43,16 @@ MaRC::Mu0Image::Mu0Image(std::shared_ptr<BodyData> body,
 bool
 MaRC::Mu0Image::read_data_i(double lat, double lon, double & data) const
 {
+    /*
+      An illuminated point at the given latitude and longitude will
+      have an incidence angle in the interval [-90, 90], i.e. mu0 >= 0
+      where mu0is the cosine of the incidence angle.  Points that are
+      not illuminated will have a value of mu0 < 0.
+    */
     data = this->body_->mu0(this->sub_solar_lat_,
                             this->sub_solar_lon_,
                             lat,
                             lon);
 
     return true;
-}
-
-bool
-MaRC::Mu0Image::is_visible(double lat, double lon) const
-{
-    return this->body_->mu0(this->sub_solar_lat_,
-                            this->sub_solar_lon_,
-                            lat,
-                            lon) >= 0;
 }
