@@ -1,3 +1,14 @@
+
+- The MU, MU0 and PHASE virtual images may now contain all cosine
+  values i.e. the interval [-1, 1], and are no longer limited to
+  positive values alone.  There was no real need to drop the negative
+  values.
+- The PHASE virtual image no longer ties the existence of a datum to a
+  positive cosine of the emission of the angle (mu), meaning cosine of
+  phase angle data will be plotted in areas of the map where mu < 0.
+- Improved speed of MU, MU0 and PHASE virtual image generation by up
+  to 100% by dropping a redundant data "visibility" check.
+
 20 August 2017 - MaRC 0.9.9
 
 - Data generated by the MU, MU0, PHASE, LATITUDE and LONGITUDE virtual
